tests/pretty/syscall/syscall.out
syscall.c:73:3: error: A **void is returned, but a *void is expected!
  return user_esps[pid];
  ^^^^
1 error(s)
